Refactor : NotificationController 테스트 코드 수정 및 API 문서 보완