@@ -3,20 +3,24 @@ package checkmate.notification.presentation;
 import checkmate.ControllerTest;
 import checkmate.TestEntityFactory;
 import checkmate.config.WithMockAuthUser;
-import checkmate.notification.application.dto.response.NotificationDetails;
-import checkmate.notification.application.dto.response.NotificationDetailsResult;
+import checkmate.notification.application.dto.response.NotificationDetailInfo;
+import checkmate.notification.application.dto.response.NotificationDetailResult;
 import checkmate.notification.application.dto.response.NotificationInfo;
 import checkmate.notification.domain.Notification;
 import checkmate.notification.domain.NotificationAttributes;
 import checkmate.notification.domain.NotificationType;
-import checkmate.notification.presentation.dto.NotificationInfosResult;
+import checkmate.notification.presentation.dto.NotificationInfoResult;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.MediaType;
 import org.springframework.restdocs.payload.JsonFieldType;
+import org.springframework.restdocs.payload.ResponseFieldsSnippet;
+import org.springframework.restdocs.request.PathParametersSnippet;
+import org.springframework.restdocs.request.RequestParametersSnippet;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
@@ -32,93 +36,117 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 class NotificationControllerTest extends ControllerTest {
     @WithMockAuthUser
     @Test
-    void 목표수행_완료_알림_조회_테스트() throws Exception {
-        List<NotificationInfo> notifications = getNotificationDetailResponseList();
-        NotificationInfosResult response = new NotificationInfosResult(notifications);
+    @DisplayName("단건 알림 조회 API")
+    void findNotificationInfo() throws Exception {
+        NotificationInfo notificationInfo = getNotificationInfo();
+        given(notificationQueryService.findNotificationInfo(any(Long.class), any(Long.class))).willReturn(notificationInfo);
 
-        given(notificationQueryService.findGoalCompleteNotifications(any(Long.class))).willReturn(notifications);
-
-        mockMvc.perform(get("/notification/goal-complete")
-                        .contentType(APPLICATION_JSON))
+        mockMvc.perform(get("/notifications/{notificationId}", 1L)
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().json(objectMapper.writeValueAsString(response)))
-                .andDo(document("find-goal-complete",
-                        responseFields(
-                                fieldWithPath("notifications[].title").type(JsonFieldType.STRING).description("푸쉬 알림 타이틀"),
-                                fieldWithPath("notifications[].content").type(JsonFieldType.STRING).description("푸쉬 알림 내용"),
-                                fieldWithPath("notifications[].type").type(JsonFieldType.STRING).description("푸쉬 알림 종류"),
-                                fieldWithPath("notifications[].attributes").type(JsonFieldType.STRING).description("해당 알림에 필요한 추가 데이터 - JSON 형식").optional()
-                        )
+                .andExpect(content().json(objectMapper.writeValueAsString(notificationInfo)))
+                .andDo(document("notification-info",
+                        notificationIdPathParametersSnippet(),
+                        notificationInfoResponseFieldsSnippet()
                 ));
     }
 
     @WithMockAuthUser
     @Test
-    void 유저별_알림_목록_조회_테스트() throws Exception {
-        NotificationDetailsResult result = new NotificationDetailsResult(
-                List.of(NotificationDetails.builder()
-                                .notificationId(1L)
-                                .title("title1")
-                                .body("body1")
-                                .checked(true)
-                                .sendAt(LocalDateTime.now())
-                                .type("INVITE_GOAL")
-                                .build(),
-                        NotificationDetails.builder()
-                                .notificationId(2L)
-                                .title("title2")
-                                .body("body2")
-                                .checked(true)
-                                .sendAt(LocalDateTime.now())
-                                .type("INVITE_GOAL")
-                                .build()),
-                true);
+    @DisplayName("목표 수행 완료 알림 조회 API")
+    void goalCompleteNotifications() throws Exception {
+        NotificationInfoResult result = new NotificationInfoResult(getNotificationDetailResponseList());
+        given(notificationQueryService.findGoalCompleteNotifications(any(Long.class))).willReturn(result);
 
-        given(notificationQueryService.findNotificationDetails(any())).willReturn(result);
-
-        mockMvc.perform(get("/notification?cursorId=20")
+        mockMvc.perform(get("/notifications/goal-complete")
                         .contentType(APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().json(objectMapper.writeValueAsString(result)))
-                .andDo(document("find-notifications",
-                        requestParameters(
-                                parameterWithName("cursorId").description("요청할 다음 cursorID. 여기서는 notificationID를 의미함"),
-                                parameterWithName("size").optional().description("조회할 알림 개수")
-                        ),
-                        responseFields(
-                                fieldWithPath("notificationDetails[].notificationId").description("푸쉬 알림의 notificationId"),
-                                fieldWithPath("notificationDetails[].title").description("푸쉬 알림 타이틀"),
-                                fieldWithPath("notificationDetails[].body").description("푸쉬 알림 내용"),
-                                fieldWithPath("notificationDetails[].checked").description("푸쉬 알림 수신 여부"),
-                                fieldWithPath("notificationDetails[].sendAt").description("푸쉬 알림 전송 날짜, 시간"),
-                                fieldWithPath("notificationDetails[].type").description("푸쉬 알림 종류"),
-                                fieldWithPath("hasNext").description("조회할 수 있는 다음 페이지가 있는지 여부")
-                        )
+                .andDo(document("notification-goal-complete",
+                        completeGoalNotificationResponseFieldsSnippet()
                 ));
     }
 
     @WithMockAuthUser
     @Test
-    void 단건_알림_조회_테스트() throws Exception {
-        Notification notification = TestEntityFactory.notification(1L, 1L, NotificationType.POST_UPLOAD);
-        NotificationInfo responseDto = toNotificationInfo(notification);
+    @DisplayName("알림 목록 조회 API")
+    void findNotifications() throws Exception {
+        NotificationDetailResult result = getNotificationDetailsResult();
+        given(notificationQueryService.findNotificationDetails(any())).willReturn(result);
 
-        given(notificationQueryService.findNotificationInfo(any(Long.class), any(Long.class))).willReturn(responseDto);
-
-        mockMvc.perform(get("/notification/{notificationId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(get("/notifications?cursorId=20&size=10")
+                        .contentType(APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().json(objectMapper.writeValueAsString(responseDto)))
-                .andDo(document("read-notification",
-                        pathParameters(
-                                parameterWithName("notificationId").description("notificationId")),
-                        responseFields(
-                                fieldWithPath("title").type(JsonFieldType.STRING).description("푸쉬 알림 타이틀"),
-                                fieldWithPath("content").type(JsonFieldType.STRING).description("푸쉬 알림 내용"),
-                                fieldWithPath("type").type(JsonFieldType.STRING).description("푸쉬 알림 종류"),
-                                fieldWithPath("attributes").type(JsonFieldType.STRING).description("해당 알림에 필요한 추가 데이터 - JSON 형식").optional()
-                        )
+                .andExpect(content().json(objectMapper.writeValueAsString(result)))
+                .andDo(document("notifications",
+                        notificationsRequestParametersSnippet(),
+                        notificationsResponseFieldsSnippet()
                 ));
+    }
+
+    private ResponseFieldsSnippet notificationsResponseFieldsSnippet() {
+        return responseFields(
+                fieldWithPath("notifications[].notificationId").description("알림 ID"),
+                fieldWithPath("notifications[].title").description("알림 타이틀"),
+                fieldWithPath("notifications[].body").description("알림 내용"),
+                fieldWithPath("notifications[].checked").description("알림 수신 여부"),
+                fieldWithPath("notifications[].sendAt").description("알림 전송 날짜, 시간"),
+                fieldWithPath("notifications[].type").description("알림 종류"),
+                fieldWithPath("hasNext").description("조회할 수 있는 다음 페이지가 있는지 여부")
+        );
+    }
+
+    private RequestParametersSnippet notificationsRequestParametersSnippet() {
+        return requestParameters(
+                parameterWithName("cursorId").description("조회를 위한 cursorID, 여기서는 notificationID를 의미함"),
+                parameterWithName("size").optional().description("조회할 알림 개수")
+        );
+    }
+
+    private NotificationDetailResult getNotificationDetailsResult() {
+        return new NotificationDetailResult(
+                List.of(getNotificationDetails(1L, NotificationType.INVITE_GOAL),
+                        getNotificationDetails(2L, NotificationType.POST_UPLOAD)),
+                true);
+    }
+
+    private NotificationDetailInfo getNotificationDetails(long notificationId, NotificationType type) {
+        return NotificationDetailInfo.builder()
+                .notificationId(notificationId)
+                .title("title")
+                .body("body")
+                .checked(true)
+                .sendAt(LocalDateTime.now())
+                .type(type.name())
+                .build();
+    }
+
+    private ResponseFieldsSnippet completeGoalNotificationResponseFieldsSnippet() {
+        return responseFields(
+                fieldWithPath("notifications[].title").type(JsonFieldType.STRING).description("알림 타이틀"),
+                fieldWithPath("notifications[].content").type(JsonFieldType.STRING).description("알림 내용"),
+                fieldWithPath("notifications[].type").type(JsonFieldType.STRING).description("알림 종류"),
+                fieldWithPath("notifications[].attributes").type(JsonFieldType.STRING).description("해당 알림에 필요한 추가 데이터 - JSON 형식").optional()
+        );
+    }
+
+    private ResponseFieldsSnippet notificationInfoResponseFieldsSnippet() {
+        return responseFields(
+                fieldWithPath("title").type(JsonFieldType.STRING).description("알림 타이틀"),
+                fieldWithPath("content").type(JsonFieldType.STRING).description("알림 내용"),
+                fieldWithPath("type").type(JsonFieldType.STRING).description("알림 종류"),
+                fieldWithPath("attributes").type(JsonFieldType.STRING).description("해당 알림에 필요한 추가 데이터 - JSON 형식").optional()
+        );
+    }
+
+    private PathParametersSnippet notificationIdPathParametersSnippet() {
+        return pathParameters(
+                parameterWithName("notificationId").description("알림 ID"));
+    }
+
+    private NotificationInfo getNotificationInfo() {
+        Notification notification = TestEntityFactory.notification(1L, 1L, NotificationType.POST_UPLOAD);
+        return toNotificationInfo(notification);
     }
 
     private List<NotificationInfo> getNotificationDetailResponseList() {
@@ -131,7 +159,7 @@ class NotificationControllerTest extends ControllerTest {
                 .title(notification.getTitle())
                 .content(notification.getContent())
                 .type(notification.getType().toString())
-                .attributes(new NotificationAttributes(Collections.emptyMap()).toString())
+                .attributes(new NotificationAttributes(Map.of("key1", "value1", "key2", "value2")).toString())
                 .build();
     }
 }
